--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solidjs/router": "^0.15.3",
+    "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/vite": "4.1.8",
     "solid-js": "^1.9.5",
     "tailwindcss": "4.1.8"
