--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@solidjs/router": "^0.15.3",
     "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/vite": "4.1.8",
+    "clsx": "^2.1.1",
     "solid-js": "^1.9.5",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "4.1.8"
   },
   "devDependencies": {
