--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/vite": "4.1.8",
     "clsx": "^2.1.1",
+    "echarts": "^5.6.0",
     "solid-js": "^1.9.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "4.1.8"
