--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,17 @@
-# VITE_SERVER_HOST=localhost
+# Optional: Host where the application will run
+# Default: localhost
+VITE_SERVER_HOST=localhost 
 
-# VITE_SERVER_PORT=3000
+# Optional: Port where the application will run
+# Default: 5173
+VITE_SERVER_PORT=5173
+
+# Required: Your Supabase project URL
+# Find this in your Supabase dashboard under Settings > API
+# Example: https://xxxxxxxxxxxxxxxxxxxx.supabase.co
+VITE_SUPABASE_URL=
+
+# Required: Your Supabase anonymous key
+# Find this in your Supabase dashboard under Settings > API > Project API keys > anon public
+# This key is safe to use in the frontend as it requires Row Level Security policies
+VITE_SUPABASE_ANON_KEY=
