--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@solidjs/router": "^0.15.3",
     "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/vite": "4.1.8",
+    "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "echarts": "^5.6.0",
     "solid-js": "^1.9.5",
