--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "4.1.8",
     "@tanstack/solid-query": "^5.80.6",
     "chart.js": "^4.4.9",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "solid-js": "^1.9.5",
     "tailwind-merge": "^3.3.0",
